# Infrastructure-Host

./: .gitignore  ARCHITECTURE.md  BARE_METAL_DEPLOYMENT_PLAN.md  CLAUDE.md  Invoke-Test.ps1  Makefile  OVERVIEW.md  PHASE1_MOVEMENT_PLAN.md  PLAN.md  PR_UPDATE.md  REFACTOR.md  REFACTOR_PLANNING.md  RESEARCH.FEEDBACK.4.md  RESEARCH.FEEDBACK.5.md  RESEARCH.FEEDBACK.6.md  RESEARCH.HYPER-V.MODULE.md  RESEARCH.TEST.ID.FORMAT.md  RESEARCH.VERIFICATIONS.PHASES.md  RULES.md  TABLE_OF_CONTENTS.md  TODO.md  identity.config.yaml.example  image.config.yaml.example  network.config.yaml.example  opencode.config.yaml.example  pyproject.toml  storage.config.yaml.example  vm.config.ps1.example  vm.config.yaml.example
PHASE_2/: BOOK_2_SECURITY_MON.md  COMPLIANCE.md  INDEX.md  RESEARCH.BOOK.1.BASE.md  RESEARCH.BOOK.2.CLAUDE.CODE.md  RESEARCH.BOOK.2.COCKPIT.md  RESEARCH.BOOK.2.PACKAGES.md  RESEARCH.BOOK.2.PKG.SECURITY.md  RESEARCH.BOOK.2.PKG.UPGRADE.md  RESEARCH.BOOK.2.USERS.md  RULES.md
PHASE_2/BOOK.2.COPILOT.CLI/: RESEARCH.BOOK.2.COPILOT.CLI.md
PHASE_2/BOOK.2.KERNEL/: RESEARCH.BOOK.2.KERNEL.md
PHASE_2/BOOK.2.MSMTP/: RESEARCH.BOOK.2.MSMTP.md
PHASE_2/BOOK.2.NETWORK/: RESEARCH.BOOK.2.NETWORK.md
PHASE_2/BOOK.2.SSH/: RESEARCH.BOOK.2.SSH.md
archive/: Invoke-VentoyTest.ps1
book-0-builder/: Invoke-SDKTest.ps1
book-1-foundation/: Invoke-AutoinstallTest.ps1
book-2-cloud/: Invoke-IncrementalTest.ps1
builder/: __main__.py  context.py  filters.py  renderer.py
tests/: Invoke-AutoinstallTest.ps1  Invoke-IncrementalTest.ps1  TEMP_Invoke-LefeckTest.ps1  TEMP_Invoke-VentoyTest.ps1
(+348 files in other folders)
